--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -152,7 +152,6 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\KoppelingController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\PeriodeController.cs" />
     <Compile Include="Controllers\StagiairController.cs" />
     <Compile Include="Controllers\TussentijdseBeeindigingController.cs" />
@@ -341,7 +340,6 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\mousecontroller.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Views\Formulier\StudentIndex.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -349,70 +347,81 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
-    <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Bedrijf\Index.cshtml" />
-    <Content Include="Views\Bedrijf\Details.cshtml" />
+    <Content Include="Scripts\Views\_ViewStart.cshtml" />
+    <Content Include="Scripts\Views\Home\Index.cshtml" />
+    <Content Include="Scripts\Views\Login\LoginScherm.cshtml" />
+    <Content Include="Scripts\Views\Home\AdminMenuPartial.cshtml" />
+    <Content Include="Scripts\Views\Home\DocentMenuPartial.cshtml" />
+    <Content Include="Scripts\Views\Formulier\Gesprek.cshtml" />
+    <Content Include="Scripts\Views\Formulier\Eind.cshtml" />
+    <Content Include="Views\Bedrijf\BulkInvoerBedrijf.cshtml" />
     <Content Include="Views\Bedrijf\Create.cshtml" />
+    <Content Include="Views\Bedrijf\Details.cshtml" />
     <Content Include="Views\Bedrijf\Edit.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Login\LoginScherm.cshtml" />
-    <Content Include="Views\Stagiair\Index.cshtml" />
-    <Content Include="Views\Stagiair\Details.cshtml" />
-    <Content Include="Views\Stagiair\Create.cshtml" />
-    <Content Include="Views\Stagiair\Edit.cshtml" />
-    <Content Include="Views\Docent\Index.cshtml" />
-    <Content Include="Views\Docent\Details.cshtml" />
-    <Content Include="Views\Docent\Create.cshtml" />
-    <Content Include="Views\Docent\Edit.cshtml" />
-    <Content Include="Views\Begeleider\Index.cshtml" />
-    <Content Include="Views\Begeleider\Details.cshtml" />
+    <Content Include="Views\Bedrijf\Index.cshtml" />
+    <Content Include="Views\Begeleider\BulkInvoerBegeleider.cshtml" />
     <Content Include="Views\Begeleider\Create.cshtml" />
+    <Content Include="Views\Begeleider\Details.cshtml" />
     <Content Include="Views\Begeleider\Edit.cshtml" />
-    <Content Include="Views\GespreksFormulier\Index.cshtml" />
-    <Content Include="Views\GespreksFormulier\Details.cshtml" />
-    <Content Include="Views\GespreksFormulier\Selecteer.cshtml" />
-    <Content Include="Views\GespreksFormulier\Edit.cshtml" />
-    <Content Include="Views\GespreksFormulier\Delete.cshtml" />
+    <Content Include="Views\Begeleider\Index.cshtml" />
+    <Content Include="Views\Beoordeling\CreateEindbeoordeling.cshtml" />
+    <Content Include="Views\Beoordeling\CreateFormulier.cshtml" />
     <Content Include="Views\Beoordeling\Details.cshtml" />
     <Content Include="Views\Beoordeling\Edit.cshtml" />
-    <Content Include="Views\TussentijdseBeeindiging\Index.cshtml" />
-    <Content Include="Views\TussentijdseBeeindiging\Details.cshtml" />
-    <Content Include="Views\TussentijdseBeeindiging\Create.cshtml" />
-    <Content Include="Views\TussentijdseBeeindiging\Edit.cshtml" />
-    <Content Include="Views\TussentijdseBeeindiging\Delete.cshtml" />
-    <Content Include="Views\Koppeling\Index.cshtml" />
-    <Content Include="Views\Koppeling\Details.cshtml" />
-    <Content Include="Views\Koppeling\Create.cshtml" />
-    <Content Include="Views\Periode\Index.cshtml" />
-    <Content Include="Views\Periode\Details.cshtml" />
-    <Content Include="Views\Periode\Create.cshtml" />
-    <Content Include="Views\Periode\Edit.cshtml" />
-    <Content Include="Views\Periode\Delete.cshtml" />
-    <Content Include="Views\Home\AdminMenuPartial.cshtml" />
-    <Content Include="Views\Home\DocentMenuPartial.cshtml" />
-    <Content Include="Views\Shared\_Menu.cshtml" />
-    <Content Include="Views\Login\index.cshtml" />
-    <Content Include="Views\Beoordeling\CreateFormulier.cshtml" />
+    <Content Include="Views\Docent\BulkInvoerDocent.cshtml" />
+    <Content Include="Views\Docent\Create.cshtml" />
+    <Content Include="Views\Docent\Details.cshtml" />
+    <Content Include="Views\Docent\Edit.cshtml" />
+    <Content Include="Views\Docent\Index.cshtml" />
+    <Content Include="Views\Formulier\Index.cshtml" />
+    <Content Include="Views\Formulier\StudentIndex.cshtml" />
     <Content Include="Views\GespreksFormulier\CreateGespreksFormulier.cshtml" />
-    <Content Include="Views\TussentijdseBeeindiging\Selecteer.cshtml" />
-    <Content Include="Views\TussentijdseBeeindiging\CreateBeeindeging.cshtml" />
-    <Content Include="Views\Beoordeling\CreateEindbeoordeling.cshtml" />
+    <Content Include="Views\GespreksFormulier\Delete.cshtml" />
+    <Content Include="Views\GespreksFormulier\Details.cshtml" />
+    <Content Include="Views\GespreksFormulier\Edit.cshtml" />
+    <Content Include="Views\GespreksFormulier\Index.cshtml" />
+    <Content Include="Views\GespreksFormulier\Selecteer.cshtml" />
+    <Content Include="Views\Koppeling\BulkInvoerKoppeling.cshtml" />
+    <Content Include="Views\Koppeling\Create.cshtml" />
+    <Content Include="Views\Koppeling\Details.cshtml" />
+    <Content Include="Views\Koppeling\Index.cshtml" />
+    <Content Include="Views\Login\index.cshtml" />
+    <Content Include="Views\Periode\Create.cshtml" />
+    <Content Include="Views\Periode\Delete.cshtml" />
+    <Content Include="Views\Periode\Details.cshtml" />
+    <Content Include="Views\Periode\Edit.cshtml" />
+    <Content Include="Views\Periode\Index.cshtml" />
+    <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Shared\_Menu.cshtml" />
     <Content Include="Views\Stagiair\BulkInvoerStagiair.cshtml" />
     <Content Include="Views\Stagiair\BulkNonActiefStagiair.cshtml" />
-    <Content Include="Views\Bedrijf\BulkInvoerBedrijf.cshtml" />
-    <Content Include="Views\Formulier\Index.cshtml" />
-    <Content Include="Views\Begeleider\BulkInvoerBegeleider.cshtml" />
-    <Content Include="Views\Docent\BulkInvoerDocent.cshtml" />
-    <Content Include="Views\Koppeling\BulkInvoerKoppeling.cshtml" />
-    <Content Include="Views\Formulier\Gesprek.cshtml" />
-    <Content Include="Views\Formulier\Eind.cshtml" />
+    <Content Include="Views\Stagiair\Create.cshtml" />
+    <Content Include="Views\Stagiair\Details.cshtml" />
+    <Content Include="Views\Stagiair\Edit.cshtml" />
+    <Content Include="Views\Stagiair\Index.cshtml" />
+    <Content Include="Views\TussentijdseBeeindiging\Create.cshtml" />
+    <Content Include="Views\TussentijdseBeeindiging\CreateBeeindeging.cshtml" />
+    <Content Include="Views\TussentijdseBeeindiging\Delete.cshtml" />
+    <Content Include="Views\TussentijdseBeeindiging\Details.cshtml" />
+    <Content Include="Views\TussentijdseBeeindiging\Edit.cshtml" />
+    <Content Include="Views\TussentijdseBeeindiging\Index.cshtml" />
+    <Content Include="Views\TussentijdseBeeindiging\Selecteer.cshtml" />
+    <Content Include="Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
-    <Folder Include="Views\Menu\" />
+    <Folder Include="Scripts\Views\Bedrijf\" />
+    <Folder Include="Scripts\Views\Begeleider\" />
+    <Folder Include="Scripts\Views\Beoordeling\" />
+    <Folder Include="Scripts\Views\Docent\" />
+    <Folder Include="Scripts\Views\GespreksFormulier\" />
+    <Folder Include="Scripts\Views\Koppeling\" />
+    <Folder Include="Scripts\Views\Menu\" />
+    <Folder Include="Scripts\Views\Periode\" />
+    <Folder Include="Scripts\Views\Shared\" />
+    <Folder Include="Scripts\Views\Stagiair\" />
+    <Folder Include="Scripts\Views\TussentijdseBeeindiging\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
