Database bedrijf NAW + entities

--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -422,6 +422,7 @@
     <Content Include="Views\Begeleider\BulkInvoerBegeleider.cshtml" />
     <Content Include="Views\Docent\BulkInvoerDocent.cshtml" />
     <Content Include="Views\Koppeling\BulkInvoerKoppeling.cshtml" />
+    <Content Include="Views\Bedrijf\lijstjeG.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
