--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -322,6 +322,7 @@
     <Content Include="App_Data\ExcelTemplates\DocentInvoegen.xlsx" />
     <Content Include="App_Data\ExcelTemplates\KoppelingInvoegen.xlsx" />
     <Content Include="App_Data\ExcelTemplates\NonActief.xlsx" />
+    <Content Include="App_Data\ExcelTemplates\StagiairInvoegen.xlsx" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\canvas2image.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
