Kleine fixes van wunderlist. JS mouse down, bedrijf edit meer?

--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -402,6 +402,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Formulier\Index.cshtml" />
     <Content Include="Views\Docent\BulkInvoerDocent.cshtml" />
+    <Content Include="Views\Bedrijf\Edit2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
