--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -414,6 +414,7 @@
     <Content Include="Views\Begeleider\BulkInvoerBegeleider.cshtml" />
     <Content Include="Views\Docent\BulkInvoerDocent.cshtml" />
     <Content Include="Views\Koppeling\BulkInvoerKoppeling.cshtml" />
+    <Content Include="Views\Bedrijf\View1.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
