--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -401,6 +401,9 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Formulier\Index.cshtml" />
     <Content Include="Views\Docent\BulkInvoerDocent.cshtml" />
+    <Content Include="Views\Home\AdminMenuPartial.cshtml" />
+    <Content Include="Views\Home\DocentMenuPartial.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
